# OpenPLi-1

./: README
cdk/apps/dvb/tools/: Makefile.am  autogen.sh  configure.ac
cdk/apps/dvb/tools/skyscan/: Makefile.am  skyscan.c
cdk/apps/dvb/tools/stream/: Makefile.am  fserver.c  fserver.h  iso639.h  streamfile.c  streampes.c  streamsec.c  streamts.c  udpstreampes.cpp  udpstreamts.c  zapstream.c
cdk/apps/dvb/zapit/: Makefile.am  autogen.sh  configure.ac  tuxbox-zapit.pc.in
cdk/apps/dvb/zapit/lib/: Makefile.am  basicclient.cpp  zapitclient.cpp
cdk/apps/dvb/zapit/src/: Makefile.am  basicserver.cpp  bouquets.cpp  channel.cpp  dvbstring.cpp  getservices.cpp  pzapit.cpp  scan.cpp  transponder.cpp  xmlinterface.cpp  zapit.cpp
cdk/apps/misc/libs/: Makefile.am  autogen.sh  configure.ac  tuxbox-connection.pc.in  tuxbox-cramfs.pc.in  tuxbox-eventserver.pc.in  tuxbox-mpegtools.pc.in  tuxbox-net.pc.in  tuxbox-ucodes.pc.in
cdk/apps/misc/libs/libconfigfile/: Makefile.am  configfile.cpp  configfile.h  tuxbox-configfile.pc.in
cdk/apps/misc/libs/libconnection/: Makefile.am  basicclient.cpp  basicclient.h  basicserver.cpp  basicserver.h
cdk/apps/misc/libs/libcramfs/: Makefile.am  libcramfs.c  libcramfs.h
cdk/apps/misc/libs/libcrypto++/: Makefile.am  bio.cpp  bio.hpp  evp.cpp  evp.hpp  exception.hpp  lib.cpp  lib.hpp  main.hpp  rand.cpp  rand.hpp  rsa.cpp  rsa.hpp  x509.cpp  x509.hpp  x509.ipp
cdk/apps/misc/libs/libeventserver/: Makefile.am  eventserver.cpp  eventserver.h
cdk/apps/misc/libs/libflashimage/: Makefile.am  cramfs.h  flashimage.cpp  flashimage.hpp  flashimage.ipp  flashimagecramfs.cpp  flashimagecramfs.hpp  flashimagefs.hpp  noexcept.cpp  noexcept.hpp
cdk/apps/misc/libs/libmd5sum/: Makefile.am  libmd5sum.c  md5.c  sys2.h  tuxbox-md5sum.pc.in
cdk/apps/misc/libs/libmpegtools/: Makefile.am  ctools.c  ctools.h  remux.c  remux.h  ringbuffy.h  transform.c  transform.h
cdk/apps/misc/libs/libnet/: Makefile.am  libnet.c  libnet.h
cdk/apps/misc/libs/libucodes/: Makefile.am  libucodes.c  libucodes.h
cdk/apps/misc/libs/libxmltree/: Makefile.am  tuxbox-xmltree.pc.in  xmlparse.cpp  xmltimpl.c  xmltok.c  xmltree.cpp
cdk/apps/tuxbox/enigma/: AUTHORS  Makefile.am  acinclude.m4  autogen.sh  changelog  configure.ac  ed  enigma.kdevprj  enigma.kdevses  enigma.pc.in
cdk/apps/tuxbox/enigma/boot/: Makefile.am
cdk/apps/tuxbox/enigma/data/: Makefile.am  encoding.conf
cdk/apps/tuxbox/enigma/doc/: README-png.txt  README.lirc  TODO  doxygen.config  registry
cdk/apps/tuxbox/enigma/flashtool/: flashtool.c
cdk/apps/tuxbox/enigma/hotplug/: Makefile.am  evtest.c  hotplug.c
cdk/apps/tuxbox/enigma/include/: Makefile.am
cdk/apps/tuxbox/enigma/lib/: Makefile.am
cdk/apps/tuxbox/enigma/po/: LINGUAS  Makefile.am  POTFILES.in  POTFILES.xml  ar.po  bg.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  fy.po  genlocales  hr.po  hu.po  is.po  it.po  locale.alias  locale.alias.image  locale.image.tar.bz2  locale.tar.bz2  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  ur.po  xml2po  zh.po
cdk/apps/tuxbox/enigma/src/: Makefile.am  audio_dynamic.cpp  audio_dynamic.h  backup.cpp  backup.h  callablemenu.cpp  callablemenu.h  channelinfo.cpp  channelinfo.h  common.h  download.cpp  download.h  elirc.cpp  elirc.h  emuconfig.cpp  emuconfig.h  engrab.cpp  engrab.h  enigma.cpp  enigma.h  enigma_bouquet.cpp  enigma_bouquet.h  enigma_ci.cpp  (+184 more)
cdk/apps/tuxbox/lcars/: Makefile.am  README  autogen.sh  configure.ac
cdk/apps/tuxbox/lcd/: Makefile.am  autogen.sh  configure.ac
cdk/apps/tuxbox/libs/: Makefile.am  autogen.sh  configure.ac
cdk/apps/tuxbox/neutrino/: Makefile.am  configure.ac
cdk/apps/tuxbox/plugins/: Makefile.am  acinclude.m4  autogen.sh  configure.ac  tuxbox-plugins.pc.in
cdk/apps/tuxbox/tools/: Makefile.am  autogen.sh  configure.ac
cdk/cdk/: FAQ  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  customize-flash-past  customize-flash-pre  init_env  prepare  prepare_neutrino  rules-archive  rules-archive.pl  rules-install  rules-install-flash  rules-make  rules-make-cygwin  rules.pl
cdk/cdk/Patches/: amule.diff  autofs.diff  bild.dm500  bild.dm56x0  bild.dm7000  binutils.diff  busybox-1.13.0.diff  busybox-flash.config  busybox.config  busybox.diff  busybox113.config  busybox12.config  busybox12.diff  busybox17.config  busybox17.diff  busybox_500.config  busybox_500maxvar.config  console-tools.diff  default_lc.esml.diff  djmount.diff  dropbear-options.h  dsniff.diff  e2fsprogs_gcc4_build_fix.diff  etherwake.diff  fbset.diff  flac.diff  ftpd.diff  gcc-core.diff  gcc-g++.diff  gcc-ibmppc4xx_fp_perflib.diff  gdb-6.3-5.diff  gdb.diff  glibc-ibmppc4xx_fp_perflib.diff  glibc-makefile-printf.diff  glibc_ppc4xx_ibmstropt.diff  gnuboy.diff  head.ko.old driver dm500  jpeg.diff  kaffe.diff  kaffeh.diff  (+61 more)
cdk/cdk/Patches/cygwin/: freetype.diff  gcc.diff  glibc.diff  kaffeh.diff  linux.diff  zlib.diff
cdk/cdk/cdkboxes/: .profile
cdk/cdk/cdkboxes/etc/: inetd.conf  profile  services
cdk/cdk/doc/: FAQ.en  INSTALL-cygwin.de  INSTALL.de  INSTALL.dreambox.image.en  INSTALL.en  README.3rdparty.de  README.SDL
cdk/cdk/root/: Makefile.am
cdk/cdk/root/etc/: Makefile.am  inetd.conf  inittab  issue.net  mime.types  nsswitch.conf  profile  protocols  services  timezone.xml  vsftpd.conf
cdk/cdk/root/share/: Makefile.am
cdk/cdk/root/var_init/: Makefile.am
cdk/hostapps/: Makefile.am  autogen.sh  configure.ac
cdk/hostapps/bmp2raw/: Makefile.am  bmp.c  bmp2ani.c  bmp2raw.c  formats.txt  raw.c  raw.h
cdk/hostapps/flash/: Makefile.am  flashcheck.cpp  flashmanage.pl  flashsign.1  flashsign.cpp
cdk/hostapps/grab/: AUTHORS  AVBuf.cpp  AVBuf.h  Changes  Makefile.am  README  Remuxer.cpp  Remuxer.h  SigFlags.cpp  SigFlags.h  SigHandler.cpp  SigHandler.h  StopWatch.cpp  StopWatch.h  grab.cpp
cdk/hostapps/libcrypto++/: Makefile.am
cdk/hostapps/libflashimage/: Makefile.am
cdk/hostapps/mk_minroot/: README  create  enigma.lst
cdk/hostapps/stream/: Makefile.am  streamvideo.c
cdk/hostapps/ucodex/: Makefile.am  ucodex.c  ucodex.h
(+2274 files in other folders)
