AUTOMAKE_OPTIONS = gnu

SUBDIRS = \
	libconfigfile \
	libconnection \
	libcramfs \
	libeventserver \
	libmd5sum \
	libmpegtools \
	libnet \
	libucodes \
	libxmltree

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = \
	tuxbox-configfile.pc \
	tuxbox-connection.pc \
	tuxbox-cramfs.pc \
	tuxbox-eventserver.pc \
	tuxbox-md5sum.pc \
	tuxbox-mpegtools.pc \
	tuxbox-net.pc \
	tuxbox-ucodes.pc \
	tuxbox-xmltree.pc

