AC_INIT(tuxbox-apps-misc-libs,0.0.1,,tuxbox-libs)
AM_INIT_AUTOMAKE(tuxbox-libs,0.0.1)

TUXBOX_APPS_ENDIAN
TUXBOX_APPS

AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_OUTPUT([
Makefile
libconfigfile/Makefile
libconnection/Makefile
libcramfs/Makefile
libeventserver/Makefile
libmd5sum/Makefile
libmpegtools/Makefile
libnet/Makefile
libucodes/Makefile
libxmltree/Makefile
tuxbox-configfile.pc
tuxbox-connection.pc
tuxbox-cramfs.pc
tuxbox-eventserver.pc
tuxbox-md5sum.pc
tuxbox-mpegtools.pc
tuxbox-net.pc
tuxbox-ucodes.pc
tuxbox-xmltree.pc
])
