AC_INIT(tuxbox-apps-tuxbox-lcd,0.0.1,,tuxbox-lcd)
AM_INIT_AUTOMAKE(tuxbox-lcd,0.0.1)

TUXBOX_APPS
TUXBOX_APPS_DIRECTORY

AC_PROG_CC
AC_PROG_CXX

TUXBOX_APPS_DRIVER

TUXBOX_APPS_LIB_PKGCONFIG(CONFIGFILE,tuxbox-configfile)
TUXBOX_APPS_LIB_CONFIG(FREETYPE,freetype-config)
TUXBOX_APPS_LIB_PKGCONFIG(LCDDISPLAY,tuxbox-lcddisplay)

AC_OUTPUT([
Makefile
lcdip/Makefile
lcdmenu/Makefile
])

