AC_INIT(tuxbox-tools,0.0.1,,tuxbox-tools)
AM_INIT_AUTOMAKE(tuxbox-tools,0.0.1)

TUXBOX_APPS
TUXBOX_APPS_DIRECTORY

AC_PROG_CC

AC_PROG_CXX

TUXBOX_APPS_LIB_PKGCONFIG(XMLTREE,tuxbox-xmltree)

TUXBOX_APPS_DRIVER

AC_OUTPUT([
Makefile
camd/Makefile
misc/Makefile
satfind/Makefile
scramble/Makefile
db_epg/Makefile
])

